SERVER-16705 fixed leak in PortMessageServer::acceptedMP

This leak occurs when the server is shutdown before the connection handling thread starts.